infrastructure/main.tf
terraform {
  required_providers {
    azurerm = {
      source  = "hashicorp/azurerm"
      version = "~> 4.0"
    }
  }
}

provider "azurerm" {
  features {}
}

resource "azurerm_resource_group" "pft" {
  name     = "pft-dev-rg"
  location = "India South Central"
}
resource "azurerm_virtual_network" "pft" {
  name                = "pft-vnet"
  location            = azurerm_resource_group.pft.location
  resource_group_name = azurerm_resource_group.pft.name
  address_space       = ["10.0.0.0/16"]
}
resource "azurerm_subnet" "pft" {
  name                 = "pft-subnet"
  resource_group_name  = azurerm_resource_group.pft.name
  virtual_network_name = azurerm_virtual_network.pft.name
  address_prefixes     = ["10.0.1.0/24"]
}
resource "azurerm_network_security_group" "pft" {
  name                = "pft-nsg"
  location            = azurerm_resource_group.pft.location
  resource_group_name = azurerm_resource_group.pft.name
}
resource "azurerm_network_security_rule" "ssh" {
  name                        = "allow-ssh"
  priority                    = 100
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "22"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.pft.name
  network_security_group_name = azurerm_network_security_group.pft.name
}
resource "azurerm_network_security_rule" "backend" {
  name                        = "allow-backend"
  priority                    = 110
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "5000"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.pft.name
  network_security_group_name = azurerm_network_security_group.pft.name
}
resource "azurerm_network_security_rule" "frontend" {
  name                        = "allow-frontend"
  priority                    = 120
  direction                   = "Inbound"
  access                      = "Allow"
  protocol                    = "Tcp"
  source_port_range           = "*"
  destination_port_range      = "3000"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.pft.name
  network_security_group_name = azurerm_network_security_group.pft.name
}
resource "azurerm_subnet_network_security_group_association" "pft" {
  subnet_id                 = azurerm_subnet.pft.id
  network_security_group_id = azurerm_network_security_group.pft.id
}
resource "azurerm_network_interface" "pft" {
  name                = "pft-nic"
  location            = azurerm_resource_group.pft.location
  resource_group_name = azurerm_resource_group.pft.name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.pft.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.pft.id
  }
}
resource "azurerm_public_ip" "pft" {
  name                = "pft-public-ip"
  location            = azurerm_resource_group.pft.location
  resource_group_name = azurerm_resource_group.pft.name
  allocation_method   = "Static"
  sku                 = "Standard"
}
resource "azurerm_linux_virtual_machine" "pft" {
  name                = "pft-vm"
  resource_group_name = azurerm_resource_group.pft.name
  location            = azurerm_resource_group.pft.location
  size                = "Standard_B2s"

  admin_username = "azureuser"

  network_interface_ids = [
    azurerm_network_interface.pft.id
  ]

  disable_password_authentication = true

  admin_ssh_key {
    username   = "azureuser"
    public_key = file(pathexpand("~/.ssh/id_ed25519.pub"))
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "ubuntu-24_04-lts"
    sku       = "server"
    version   = "latest"
  }
}
